Converting to ShadowAssociationValue on demand
Shadow association values use ShadowAssociationValue instead of
PrismContainerValue<ShadowAssociationValueType>. The conversion is now
done when applyDefinition is called.

This (and test adaptations in this commit) should fix remaining tests.
So, now all the tests should work for original associations. The work
on native ones can continue from provisioning-impl upwards.